# sonicriderste

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  gcc_warnings.txt  sonicriders.sha1  static.lcf
asm/: bss.s  ctors.s  data.s  dtors.s  init.s  libSDK.S  macros.inc  rodata.s  sbss.s  sbss2.s  sdata.s  sdata2.s  text.s
asm/_Main/: bss.s  data.s  rodata.s
include/: alignment.hpp  compare_many.hpp  context.hpp  endian.hpp  flags.hpp  globalDefs.hpp  gvr_texture.hpp  macros.S  macros.h  macros.hpp  main.hpp  ninjanext.hpp  shared-definitions.h  types.hpp
include/nn/: ninjanext.hpp
include/nn/lib/: camera.hpp  drawobj.hpp  drawprim.hpp  light.hpp  material.hpp  matrix.hpp  node.hpp  system.hpp  texture.hpp
include/nn/struct/: camera.hpp  material.hpp  motion.hpp  nns.hpp  node.hpp  object.hpp  texture.hpp
include/riders/: character.hpp  collision.hpp  controller.hpp  gamemode.hpp  gear.hpp  general_flags.hpp  heap.hpp  hud.hpp  object.hpp  player.hpp  stage.hpp  tricks.hpp
src/: tedata.cpp
src/aprilfools/: aprilfools.cpp
src/containers/: graphicalobject.hpp  particle_details.hpp  particleparam.hpp  rgba.cpp  rgba.hpp  rotation.hpp  vector3.cpp  vector3.hpp
src/cosmetics/: japanesevoice.cpp
src/cosmetics/hud/: airbar.cpp  holdmorerings.cpp
src/cosmetics/menu/: menucolors.cpp  menucolors.hpp  stageicon.cpp
src/cosmetics/player/: afterburner_effect.cpp  dreamtrail.cpp  dreamtrail.hpp  exhaustTrail.cpp  exloads.cpp  exloads.hpp  hypersonic_lighting.cpp  hypersonic_lighting.hpp  jumpchargeparticlecolor.cpp  jumpchargeparticlecolor.hpp  jumpchargeparticlevisibility.cpp  skinsystem.cpp  skinsystem.hpp  supersonicaura.cpp  supersonicaura.hpp
src/cosmetics/stage/: fogdistance.cpp
src/data/: tedata.cpp
src/data/trick_strings/: trickData.hpp
src/data/trick_strings/characters/: aiai.cpp  amy.cpp  blaze.cpp  chaos.cpp  cream.cpp  e10g.cpp  e10r.cpp  eggman.cpp  emerl.cpp  jet.cpp  knuckles.cpp  metal_sonic.cpp  nights.cpp  rouge.cpp  shadow.cpp  silver.cpp  sonic.cpp  storm.cpp  supersonic.cpp  tails.cpp  tikal.cpp  ulala.cpp  wave.cpp
src/dolphin/: card.cpp  card.hpp  gx.cpp  gx.hpp  os.cpp  os.hpp  runtime.cpp
src/gears/: advantagef.cpp  advantagef.hpp  advantagep.cpp  advantagep.hpp  airtank.cpp  airtank.hpp  beginner.cpp  beginner.hpp  berserker.cpp  berserker.hpp  blastGaugeGears.cpp  blastGaugeGears.hpp  coverf.cpp  coverf.hpp  coverp.cpp  coverp.hpp  covers.cpp  covers.hpp  darkness.cpp  darkness.hpp  dynamo.cpp  dynamo.hpp  eggsterminator.cpp  eggsterminator.hpp  faster.cpp  faster.hpp  fastest.cpp  fastest.hpp  gambler.cpp  gambler.hpp  hangon.cpp  hangon.hpp  hyperhangon.cpp  hyperhangon.hpp  hypersonic.cpp  hypersonic.hpp  magiccarpet.cpp  magiccarpet.hpp  olliekinggear.cpp  olliekinggear.hpp  (+19 more)
src/gears/tweaks/: newgearselect.cpp  newgearselect.hpp  nolevelup.cpp  ringgear_ringsfromairboxes.cpp  ringgearlevels.cpp  ringgearlevels.hpp  stickyfingersrequiem.cpp
src/handlers/: customcodehandler.cpp  customcodehandler.hpp  customcodehandler_func.cpp  customcodehandler_func.hpp  handlers.cpp  prolog.cpp  prolog.hpp
src/handlers/files/: LoadCharacterDATFile.cpp  filehandler_dat.cpp  filehandler_dat.hpp  filehandler_loadingscreen.cpp  filehandler_mainmenu.cpp  load_deduplicated.cpp  load_deduplicated.hpp  modeldrawing.cpp  modeldrawing.hpp  packman_handlers.cpp  packman_handlers.hpp  separatemodelloading.cpp  separatemodelloading.hpp  texturehotswap_handler.cpp
src/handlers/gamemode/: tutorialmode.cpp  tutorialmode.hpp
src/handlers/ingame/: customcss.cpp  customcss.hpp  customhud.cpp  customhud.hpp  customtext.cpp  customtext.hpp
src/handlers/menu/: graphicalobject_handlers.cpp  loadingscreentips.cpp  randomstage.cpp  randomstage.hpp
src/handlers/menu/debugmenu/: debugmenu.cpp  debugmenu.hpp  debugmenu_handlers.cpp  debugmenu_handlers.hpp
src/handlers/menu/tournamentrace/: stageban_handler.cpp  stageban_handler.hpp
src/handlers/music/: custom_music.cpp  custom_music.hpp
src/handlers/player/: ItemBox.cpp  ItemBox.hpp  SetPlayerState.cpp  SetPlayerState.hpp  antiitemcamp.cpp  antiitemcamp.hpp  boundingbox.cpp  boundingbox.hpp  deathplane.cpp  deathplane.hpp  dynamic_itemboxcooldown.cpp  initgeardata.cpp  initgeardata.hpp  quillmovement.cpp  specialflagtweaks.cpp  specialflagtweaks.hpp  timerhandler.cpp  timerhandler.hpp  voicelines.cpp  voicelines.hpp  zbutton.cpp  zbutton.hpp  zignoretornado.cpp
src/handlers/stage/: customobjects.cpp  customobjects.hpp
src/lib/: ASMHelper.hpp  animation.hpp  calculate_date.cpp  calculate_date.hpp  files.cpp  files.hpp  lib.cpp  lib.hpp  operators.cpp  sound.cpp  sound.hpp  stdlib.hpp  thread.cpp  thread.hpp
src/mechanics/: airoutbutton.cpp  airoutbutton.hpp  autopilot.cpp  autopilot.hpp  boostcontrol.cpp  fastfall.cpp  fastfall.hpp  lcanceling.cpp  lcanceling.hpp  magneticimpulse.cpp  magneticimpulse.hpp  rearview_cam.cpp  slipstream.cpp  slipstream.hpp  speed_shoes.cpp  speed_shoes.hpp
src/mechanics/archetype/: afterburner.cpp  afterburner.hpp  superleap.cpp
src/mechanics/characters/: gizoidreplication.cpp  gizoidreplication.hpp
src/mechanics/dash/: flyhoopdash.cpp  flyhoopdash.hpp  grindraildash.cpp  grindraildash.hpp
src/riders/: player.cpp
src/tweaks/: sfx.cpp  sfx.hpp
src/tweaks/bugfixes/: eggfacqtefix.cpp  fixsegaillusionfastqte.cpp  skyroadturbfix.cpp  skyroadturbfix.hpp
src/tweaks/player/: attackrange.cpp  boostchainmultiplier.cpp  boostchainmultiplier.hpp  driftcap.cpp  jumpinrun.cpp  runspeed.cpp  runspeed.hpp  type_amount.cpp  weight.cpp
src/tweaks/stage/: additive_dashpanels.cpp  additive_dashpanels.hpp  collisiontweaks.cpp  custompowerobjecttimer.cpp  itemrngchange.cpp  itemrngchange.hpp  rail_fastfall.cpp  rampdistance.cpp  ringspawntimer.cpp  signgrinding.cpp  stage_changes.cpp  stage_changes.hpp
src/tweaks/typeshortcuts/: flyhoopspeeds.cpp  grindrailspeed.cpp  typeshortcut_modifications.cpp
src/vanilla/: vanilla_SetPlayerState.cpp  vanilla_initgeardata.cpp
tools/: CMakeLists.txt  elf2rel.c  makeTools.sh  parse_map.py
(+18 files in other folders)
